gcc/testsuite/gdc.test/fail_compilation/fail356c.d
import foo = imports.fail356;
int foo; // collides with renamed import
